--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "discord.js": "^14.14.1"
+    "discord.js": "^14.14.1",
+    "sqlite3": "^5.1.6"
   }
 }
