--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "axios": "^1.6.3",
     "discord.js": "^14.14.1",
+    "openai": "^4.0.0",
     "sqlite3": "^5.1.6"
   }
 }
