--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.6.3",
     "discord.js": "^14.14.1",
     "openai": "^4.0.0",
+    "source-map-support": "^0.5.21",
     "sqlite3": "^5.1.6"
   }
 }
