--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Master-Ferrari/RIBOT2#readme",
   "devDependencies": {
+    "@types/xml2js": "^0.4.14",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
   },
@@ -27,6 +28,7 @@
     "discord.js": "^14.14.1",
     "openai": "^4.0.0",
     "source-map-support": "^0.5.21",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "xml2js": "^0.6.2"
   }
 }
