--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx rimraf ./dist && npx tsc",
     "ribot": "npx rimraf ./dist && npx tsc && node dist/motherscript.js",
-    "test": "npx rimraf ./dist && npx tsc && node dist/index.js"
+    "test": "npx rimraf ./dist && npx tsc && node dist/index.js",
+    "test-update": "npx rimraf ./dist && npx tsc && node dist/index.js update"
   },
   "repository": {
     "type": "git",
